fix aligns on claim page and changephone input on ready page

--- a/css/main.css
+++ b/css/main.css
@@ -1262,6 +1262,12 @@ a:focus {
   padding: 81px 0 8px 49px;
   letter-spacing: -1.5px;
 }
+@media (max-width: 992px) {
+  .claim__caption {
+    text-align: center;
+    padding: 81px 0 8px;
+  }
+}
 @media (max-width: 576px) {
   .claim__caption {
     width: 290px;
@@ -1350,11 +1356,12 @@ a:focus {
   font-family: 'Gotham';
   font-weight: 400;
   font-size: 48px;
-  padding: 13px 30px 1px 56px;
+  padding: 13px 0 1px;
+  text-align: center;
 }
 .prices__price_free {
   font-size: 56px;
-  padding: 16px 44px 25px 41px;
+  padding: 16px 0 25px;
 }
 .prices__par {
   margin: 0 24px 21px 24px;
@@ -1454,21 +1461,30 @@ a:focus {
   }
 }
 .form__label {
+  display: inline-block;
+  margin-right: 12px;
+  width: 92px;
   position: relative;
+}
+@media (max-width: 768px) {
+  .form__label {
+    width: 64px;
+  }
 }
 .form__label:before {
   position: absolute;
   content: '(';
   font-family: 'Gotham';
   font-weight: 400;
-  font-size: 23px;
+  font-size: 30px;
   color: #767474;
-  top: -22px;
-  left: 15px;
+  top: 7px;
+  left: -16px;
 }
 @media (max-width: 768px) {
   .form__label:before {
-    left: 6px;
+    top: 17px;
+    left: -4px;
   }
 }
 .form__label:after {
@@ -1476,14 +1492,15 @@ a:focus {
   content: ')';
   font-family: 'Gotham';
   font-weight: 400;
-  font-size: 23px;
+  font-size: 30px;
   color: #767474;
-  top: -22px;
-  right: 24px;
+  top: 7px;
+  right: -2px;
 }
 @media (max-width: 768px) {
   .form__label:after {
-    right: 9px;
+    top: 17px;
+    right: -11px;
   }
 }
 .form__input {
@@ -1576,6 +1593,18 @@ a:focus {
   .form__numbers_large {
     width: 92px;
     margin-left: 0;
+  }
+}
+.form__numbers_phone {
+  box-sizing: border-box;
+  width: 78px;
+  padding: 7px 2px;
+}
+@media (max-width: 768px) {
+  .form__numbers_phone {
+    margin-left: 10px;
+    padding: 7px 2px;
+    width: 50px;
   }
 }
 .form__button-cont {
