--- a/less/claim.less
+++ b/less/claim.less
@@ -31,6 +31,11 @@
 		padding: 81px 0 8px 49px;
 		letter-spacing: -1.5px;
 
+		@media (max-width: 992px) {
+			text-align: center;
+			padding: 81px 0 8px;
+		}
+
 		@media (max-width: 576px) {
 			width: 290px;
 			padding-left: 0;
@@ -119,11 +124,12 @@
 		font-family: 'Gotham';
 		font-weight: 400;
 		font-size: 48px;
-		padding: 13px 30px 1px 56px;
+		padding: 13px 0 1px;
+		text-align: center;
 
 		&_free {
 			font-size: 56px;
-			padding: 16px 44px 25px 41px;
+			padding: 16px 0 25px;
 		}
 	}
 
